# django-2021

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  docker-compose.yml  entrypoint.prod.sh  pyproject.toml
.github/workflows/: dev.yml
astronauts/: apps.py  urls.py  views.py
astronauts/locale/de/LC_MESSAGES/: django.po
astronauts/locale/en/LC_MESSAGES/: django.po
astronauts/locale/ja/LC_MESSAGES/: django.po
astronauts/templates/astronauts/: index.html
books/: admin.py  models.py  rest.py  tests.py  urls.py  views.py
books/locale/de/LC_MESSAGES/: django.po
books/locale/en/LC_MESSAGES/: django.po
books/locale/ja/LC_MESSAGES/: django.po
books/migrations/: 0001_initial.py  0002_alter_chapter_title.py  0003_chapter_numeral.py  0004_auto_20211005_1536.py
books/static/books/: style.css
books/templates/: base.html
books/templates/books/: book-details.html  book_details.html  chapter-details.html  chapter_details.html  chapters.html  index.html  language-dropdown.html
infrastructure/: .terraform.lock.hcl  main.tf  outputs.tf
nginx/: nginx.conf
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_auto_20211010_1741.py  0003_auto_20211010_1742.py
templates/admin/: base_site.html
tests/: test_py_library_service.py
utils/middlewares/: servername.py  stats.py
