[tool.poetry]
name = "py-library-service"
version = "0.1.0"
description = ""
authors = ["Mirco Kraenz <kraenzmirco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
