[tool.poetry]
name = "py-library-service"
version = "0.1.0"
description = ""
authors = ["Mirco Kraenz <kraenzmirco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.12"
Django = "^3.2.7"
gunicorn = "^20.1.0"
gevent = "^21.8.0"
psycopg2-binary = "^2.9.1"
Pygments = "^2.10.0"
djangorestframework = "^3.12.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

# See https://github.com/microsoft/pyright/blob/main/docs/getting-started.md
pyright = "^0.0.10"
django-types = "^0.8.1"
hypothesis = "^6.23.1"
black = "^21.9b0"
pre-commit = "^2.15.0"
coverage = "^6.0"
djangorestframework-types = "^0.6.0"
# and https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
[tool.pyright]
include = ["."]
# strict = ["."] # TODO enable
useLibraryCodeForTypes = true
reportMissingImports = true
# reportUnusedImport = true
reportMissingTypeStubs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
